feat: login page, dark mode and user management for ai-orchestration monitor fix: - Update example pictures with latest UI design - Chat fix when rooms are not properly created - Remove old nginx jwt solution - Styling fixes in chatllm, jira, openmaps - Add full implementation of vehicle api for openmaps - Petstore entity loading fixes

--- a/ai-orchestration/ai-orchestration-monitor/index.html
+++ b/ai-orchestration/ai-orchestration-monitor/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AI Orchestration Monitor</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+      };
+    </script>
     <style>
       /* Custom scrollbar for webkit browsers */
       ::-webkit-scrollbar {
